kubernetes/media/apps/cross-seed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cross-seed
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: cross-seed
  template:
    metadata:
      labels:
        app: cross-seed
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: cross-seed
          image: ghcr.io/cross-seed/cross-seed:6.13.6
          command: ["daemon"]
          ports:
            - containerPort: 2468
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cross-seed-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
---
apiVersion: v1
kind: Service
metadata:
  name: cross-seed
  namespace: media
spec:
  selector:
    app: cross-seed
  ports:
    - port: 2468
      targetPort: 2468
      protocol: TCP
      name: http
