kubernetes/media/apps/autobrr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:v1.74.0
          ports:
            - containerPort: 7474
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: autobrr-config
---
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: media
spec:
  selector:
    app: autobrr
  ports:
    - port: 7474
      targetPort: 7474
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobrr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Autobrr
    gethomepage.dev/group: Media
    gethomepage.dev/widget.type: autobrr
    gethomeage.dev/widget.url: https://autobrr.saturn.ong
    gethomepage.dev/widget.key: "${AUTOBRR_API_KEY}"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/hostname: autobrr.saturn.ong
    external-dns.alpha.kubernetes.io/target: direct.saturn.ong
spec:
  tls:
    - secretName: autobrr.saturn.ong-tls
      hosts:
        - autobrr.saturn.ong
  rules:
    - host: "autobrr.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: autobrr
                port:
                  number: 7474
