kubernetes/media/apps/navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: navidrome
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
          image: deluan/navidrome:0.62.0
          ports:
            - containerPort: 4533
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /music
              name: music
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: music
          persistentVolumeClaim:
            claimName: music
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
spec:
  selector:
    app: navidrome
  ports:
    - port: 4533
      targetPort: 4533
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Navidrome
    gethomepage.dev/group: Media
    gethomepage.dev/icon: navidrome
    gethomepage.dev/weight: 10
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: navidrome.saturn.ci
    external-dns.alpha.kubernetes.io/target: direct.saturn.ci
spec:
  tls:
    - secretName: navidrome.saturn.ci
      hosts:
        - navidrome.saturn.ci
  rules:
    - host: "navidrome.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
